--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -65,6 +65,10 @@ body {
 }
 
 /* Navbar & Header */
+.navbar .dropdown-menu
+{
+    box-shadow: 0px 0px 1px 1px #d4d4d4;
+}
 header, .nav-container {
     background-color: #0d405c;
 }
@@ -111,6 +115,25 @@ header div.hero {
     animation-duration: 2.2s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+}
+
+/* Auth List */
+
+.navbar .auth-list a i
+{
+    background: #184257;
+    color: white;
+    border-radius: 5px;
+    padding: 9px;
+}
+
+.navbar .auth-list .dropdown-menu
+{
+    right: 0;
+}
+.navbar .auth-list .dropdown-toggle::after
+{
+    display: none;
 }
 
 /* Comming Events */
