--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -836,7 +836,7 @@ section#contact-page div:has(> a), section#contact-page div > a
 #articles-page-body .items div:has( > img)
 {
     overflow: hidden;
-    aspect-ratio: 1/0.65;
+    aspect-ratio: 1 / 0.45;
 }
 #articles-page-body .items .article-meta {
     font-size: 0.8rem;
@@ -852,4 +852,16 @@ section#contact-page div:has(> a), section#contact-page div > a
 #article-info a
 {
     color: #05354f;
+}
+
+#article-info .article-image-holder
+{
+    overflow: hidden;
+    aspect-ratio: 1 / 0.45;
+}
+
+#article-info .article-image-holder img
+{
+    min-height: 100%;
+    min-width: 100%;
 }
