--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -512,6 +512,7 @@ header div.hero img
 #books-page-body .sort select,
 #books-page-body .limit select, 
 #events-page-body select,
+#blogs-page-body select,
 #articles-page-body select
 {
     width: unset;
@@ -894,4 +895,53 @@ section#contact-page div:has(> a), section#contact-page div > a
 {
     background-color: initial;
     border: initial;
+}
+
+/* Blogs Carousal */
+.blogs-carousel .image-container
+{
+    width: 55px;
+    height: 55px;
+    min-width: 55px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.blogs-carousel .image-container img
+{
+    min-height: 100%;
+    min-width: 100%;
+}
+
+/* Blogs */
+.blogs-container .image-holder 
+{
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.blogs-container .image-holder img
+{
+    min-width: 100%;
+    min-height: 100%;
+}
+.blogs-container .blog-date
+{
+    font-size: 0.8rem;
+}
+#blogs-page-body .open-create-post .image-holder
+{
+    width: 45px;
+    height: 45px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+#blogs-page-body .open-create-post .image-holder img
+{
+    min-width: 100%;
+    min-height: 100%;
+}
+#blogs-page-body .open-create-post span
+{
+    background-color: #e9e9e9;    ;
 }
