--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -943,5 +943,20 @@ section#contact-page div:has(> a), section#contact-page div > a
 }
 #blogs-page-body .open-create-post span
 {
-    background-color: #e9e9e9;    ;
+    background-color: #e9e9e9;
+}
+#blogs-page-body .actions button 
+{
+    background-color: initial;
+    border: initial;
+}
+
+#blogs-page-body .content p
+{
+    margin: initial;
+}
+
+#blogs-page-body .blog-readmore
+{
+    color: #05354f;
 }
