responsive improvments - pdf basic read
improved responsive of about us and contact us page

--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -705,6 +705,10 @@ section#about-us-page p
 {
     line-height: 1;
 }
+section#about-us-page img
+{
+    max-width: 100%;
+}
 /* Contact Us */
 section#contact-page div:has(> a), section#contact-page div > a 
 {
