--- a/public/front/css/main.rtl.css
+++ b/public/front/css/main.rtl.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 992px) {
     .owl-nav {
-        transform: translate(2.7%, -50%);
+        transform: translate(2.7%, -50%) !important;
     }
 }
