dasbhoard quotes and people

--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -281,6 +281,7 @@ section#quotes .quote-back .quotes-carousel .owl-item
 {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 section#quotes .quote-back .quotes-carousel .owl-dots
 {
