--- a/public/back/css/custom.css
+++ b/public/back/css/custom.css
@@ -5,3 +5,9 @@ Website: https://themesbrand.com/
 Contact: support@themesbrand.com
 File: Custom Css File
 */
+
+.remove_button
+{
+    background-color: initial;
+    border: initial;
+}
