--- a/public/back/css/custom.css
+++ b/public/back/css/custom.css
@@ -11,3 +11,10 @@ File: Custom Css File
     background-color: initial;
     border: initial;
 }
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background-color: #405189;
+}
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+    color: #ffffff;
+}
