--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -956,7 +956,7 @@ section#contact-page ul li:not(:last-of-type)
     background-color: initial;
     border: initial;
 }
-#article-info .content .ck-content .image img {
+#article-info .content .image img {
     display: block;
     margin: 0 auto;
     max-width: 100%;
