--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -77,7 +77,7 @@ textarea
 .dropdown-item.active, .dropdown-item:active
 {
     background-color: #0d405c;
-    color: white;
+    color: white !important;
 }
 
 /* Owl Customization */
