--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -754,6 +754,7 @@ section#contact-page ul li:not(:last-of-type)
     aspect-ratio: 1 / 0.6;
     height: 170px;
     overflow: hidden;
+    min-width: fit-content;
 }
 
 #events-page-body .event-image img
