minifing images size

--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -201,7 +201,7 @@ header div.hero {
 /* Comming Events */
 #comming-event .event
 {
-    background-image: url('../imgs/comming_event.png');
+    background-image: url('../imgs/comming_event.jpg');
     background-attachment: fixed;
     background-position: center;
     overflow: hidden;
