--- a/public/front/css/main.css
+++ b/public/front/css/main.css
@@ -88,6 +88,7 @@ textarea
     width: calc(100% + 18px);
     display: flex;
     justify-content: space-between;
+    z-index: -1;
 }
 .owl-nav button.disabled {
     visibility: hidden;
